@@ -1511,6 +1511,13 @@ command to generate the output files.
     <glob pattern="*.mid"/>
     <glob pattern="*.midi"/>
   </mime-type>
+  <mime-type type="audio/x-m4a">
+    <_comment>MP4 audio</_comment>
+    <magic priority="50">
+      <match type="string" value="ftypM4A" offset="0"/>
+    </magic>
+    <glob pattern="*.m4a"/>
+  </mime-type>
   <mime-type type="audio/x-mod">
     <_comment>Amiga SoundTracker audio</_comment>
     <glob pattern="*.mod"/>
@@ -1527,7 +1534,6 @@ command to generate the output files.
     <magic priority="50">
       <match type="big32" value="0xfffb" offset="0"/>
       <match type="string" value="ID3" offset="0"/>
-<!--      <match type="big16" mask="0xfff0" value="0xfff0" offset="0"/> -->
     </magic>
     <glob pattern="*.mp3"/>
   </mime-type>
