@@ -1,5 +1,9 @@
 2004-12-10  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml.in: added audio/x-m4a, fixes #584
+
+2004-12-10  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml.in: move a few definitions to get an
 	alphabetically ordered file.
 
